Modified font-size on medium and small resolutions to be 14px instead of the default 16px to avoid clipping on the container

--- a/styles.css
+++ b/styles.css
@@ -260,12 +260,20 @@ hr {
         max-width: 50%;
         flex: 0 0 50%;
     }
+
+    .project-blurb {
+        font-size: 14px;
+    }
 }
 
 @media (max-width: 767px) {
     .col-sm-12 {
         max-width: 100%;
         flex: 0 0 100%;
+    }
+
+    .project-blurb {
+        font-size: 14px;
     }
 }
 
